# www.richtman.au

./: .gitattributes  .gitignore  .gitmodules  .mado.toml  .pre-commit-config.yaml  .pymarkdown.json  .pymarkdown.yaml  README.md  config.toml  flake.nix  netlify.toml  pyproject.toml  renovate.json5  shell.nix
.devcontainer/: Containerfile  devcontainer.json
.github/workflows/: auto-upgrade.yml  ci.yml  poetry-upgrade.yml  pre-commit.yml
content/: _index.md
content/blog/: _index.md  acr122u-nfc-cloning-on-wsl2.md  agile-team-values-workshop.md  artifactory-saml-sso-session-invalidation.md  aws-alb-auth-with-oidc.md  aws-cloud-init-on-windows.md  aws-eks-irsa-debugging.md  aws-sso-role-assumption-traceability.md  busybox-rfc3339.md  ci-cd-poetry-package-publishing.md  ci-cd-terraform-private-git-modules.md  configuring-ldap-access-to-a-domain-controller-from-a-new-network.md  configuring-wsl2-nixos-for-vscode-remote-development.md  consistency-terraform-lock-files-gitlab-ci.md  debugging-k8s-cni.md  dismantling-ruby-gems.md  gitlab-2-way-repository-collaboration.md  gitlab-docker-compose-tips-n-tricks.md  gitlab-terraform-private-git-modules.md  healthcheck-prom-dead-man.md  helm-repository-credentials-with-artifactory.md  k8s-apiserver-mtls-oidc.md  k8s-apiserver-prom-anon.md  k8s-oidc-kanidm.md  kubernetes-the-nix-way-0.md  kubernetes-the-nix-way-1.md  kubernetes-the-nix-way-2.md  kubernetes-the-nix-way-3.md  kubernetes-the-nix-way-4.md  macos-monterey-yubikey-setup.md  nix-containers.md  (+29 more)
static/: ai.txt  root-ca.pem
templates/: base.html  index.html  robots.txt
(+56 files in other folders)
