[tool.poetry]
name = "www-richtman-com-au"
version = "0.1.0"
description = "developer tooling for my website"
authors = ["Richtman, Ariel <10679234+arichtman@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "www"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
